experience content better draft, now it renders a list and correct text alignment

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+ul {
+  padding-inline-start: 20px;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
